--- a/app/RideShareOZ/app/src/main/res/values/strings.xml
+++ b/app/RideShareOZ/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="_SeatNo">Total seats</string>
     <string name="_Submit"><a href="#">Submit</a></string>
     <string name="_Reset"><a href="#">Reset</a></string>
+    <string name="RequestLabel">Requests:</string>
 </resources>
