--- a/app/RideShareOZ/app/src/main/res/values/strings.xml
+++ b/app/RideShareOZ/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="PassViewPass">Passengers</string>
     <string name="LeaveRide">Leave</string>
     <string name="ViewRide">VIEW RIDE</string>
-    <string name="startLabel">Start: </string>
+    <string name="startLabel">Address: </string>
     <string name="endLabel">End:</string>
     <string name="timeLabel">Time: </string>
     <string name="passLabel">Joined: </string>
@@ -46,5 +46,5 @@
     <string name="endPoint">To:</string>
     <string name="creator">Creator:</string>
     <string name="seats">Seats:</string>
-    <string name="departureText">Departure point:</string>
+    <string name="departureText">Address:</string>
 </resources>
