--- a/app/RideShareOZ/app/src/main/res/values/strings.xml
+++ b/app/RideShareOZ/app/src/main/res/values/strings.xml
@@ -50,4 +50,7 @@
     <string name="creator">Creator:</string>
     <string name="seats">Seats:</string>
     <string name="departureText">Address:</string>
+    <string name="state">State:</string>
+    <string name="suburb">suburb:</string>
+    <string name="street">street</string>
 </resources>
