RSOORA-48 resolved. Added ViewGroupActivity, Group class.

--- a/app/RideShareOZ/app/src/main/res/values/strings.xml
+++ b/app/RideShareOZ/app/src/main/res/values/strings.xml
@@ -63,4 +63,8 @@
     <string name="EditDate">Set DATE</string>
     <string name="ArrivalTime">SET ArrivalTIME</string>
     <string name="rideStartTime">SET STARTTIME</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_view_group">ViewGroupActivity</string>
 </resources>
