--- a/app/RideShareOZ/app/src/main/res/values/strings.xml
+++ b/app/RideShareOZ/app/src/main/res/values/strings.xml
@@ -35,6 +35,8 @@
     <string name="acceptButton">Accept</string>
     <string name="rejectButton">Reject</string>
     <string name="driverLabel">Driver</string>
+    <string name="_Groups">Groups</string>
+    <string name="_Events">Events</string>
     <string-array name="seats">
         <item>1</item>
         <item>2</item>
@@ -67,4 +69,5 @@
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_view_group">ViewGroupActivity</string>
+    <string name="title_activity_groups">Groups</string>
 </resources>
