--- a/app/RideShareOZ/app/src/main/res/values/strings.xml
+++ b/app/RideShareOZ/app/src/main/res/values/strings.xml
@@ -56,7 +56,8 @@
     <string name="ArrivalTime">SET ARRIVAL TIME</string>
     <string name="rideStartTime">SET START TIME</string>
     <string name="title_activity_view_group">ViewGroupActivity</string>
-    <string name="rateString">RATE</string>
+    <string name="title_activity_groups">Groups</string>
+    <string name="rateRideString">RATE</string>
 
     <string-array name="seats">
         <item>1</item>
