--- a/app/RideShareOZ/app/src/main/res/values/strings.xml
+++ b/app/RideShareOZ/app/src/main/res/values/strings.xml
@@ -59,6 +59,7 @@
     <string name="title_activity_groups">Groups</string>
     <string name="rateRideString">RATE</string>
     <string name="AboutTheGroup">About the group:</string>
+    <string name="rateLabelString">How do you think about this trip?</string>
 
     <string-array name="seats">
         <item>1</item>
