--- a/app/RideShareOZ/app/src/main/res/values/strings.xml
+++ b/app/RideShareOZ/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">RideShareOZ</string>
     <string name="action_settings">Settings</string>
+    <string name="action_profile">Profile</string>
     <string name="action_signout">Sign out</string>
     <string name="action_account">Account</string>
     <string name="title_activity_pass_view_ride">PassViewRide</string>
